2007-01-18 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* support/regression/tests/swap.c: added in response to #1638622
	* doc/sdccman.lyx: synced version, minor changes

2007-01-18 Borut Razem <borut.razem AT siol.net>

	* SDCClabel.c: fixed bug #1638651: wrong linenumber presented in warning,
	  thanks to Gunther Jehle
	* src/asm.c: don't die if the file drfined in #line couldn't be opened
	* src/SDCC.lex, src/SDCCglobal.h, src/SDCCicode.c, src/SDCCsymt.c,
	  src/SDCCval.c: removed redundant definitions of currFname and mylineno;
	  use filename in lineno instead.
	* SDCCast.c: removed MSVC warning C4018: '==' : signed/unsigned mismatch,
	  print the file name in ast_print()

2007-01-18 Borut Razem <borut.razem AT siol.net>

	* support/Util/dbuf_string.c: removed (PTR) cast since it is not
	  defined in MSVC
	* src/SDCC.lex: stringLiteral() returns const char pointer,
	  EOF detection in stringLiteral(), fixed asmbuf memory leak,
	  fixed column counting
	* src/SDCCval.[ch]: constVal(), value *strVal() and charVal()
	  accept const char pointer as parameter
	* src/SDCCdwarf2.c: corrected buffer size

2007-01-17 Borut Razem <borut.razem AT siol.net>

	* support/Util/dbuf_string.c: fixed for amd64

2007-01-15 Borut Razem <borut.razem AT siol.net>

	* src/pic16/ralloc.c, src/pic/ralloc.c, src/SDCC.y:
	  removed terminal symbol ELIPSIS, since it was never generated by the
	  lexer and it was wrongly used in parameter_identifier_list rule

2007-01-15 Raphael Neider <rneider AT web.de>

	* doc/sdccman.lyx: updated PIC14/16 command line args, updated PIC14
	    code page and data banking description
	* src/pic/genarith.c,
	* src/pic/gen.h: removed bit arithmetic functions,
	    updated exit(1) to exit(EXIT_FAILURE)
	* device/lib/pic16/libsdcc/stack/stack.S: default to 256 byte stack
	* device/include/pic16/pic18f2455.h,
	* device/lib/pic16/libdev/pic18f2455.c: added PORTD, LATD, LATE,
	    TRISD and TRISE, fixed/added some bit names